# Cybersecurity-Projects-from-CarterPerez-dev

.github/workflows/: lint.yml
PROJECTS/beginner/canary-token-generator/backend/cmd/canary/: main.go
PROJECTS/beginner/canary-token-generator/backend/internal/admin/: integration_test.go
PROJECTS/beginner/canary-token-generator/backend/internal/token/generators/registry/: registry.go  registry_test.go
PROJECTS/foundations/hash-identifier/: README.md  hash_identifier.py  install.sh  justfile  pyproject.toml  test_hash_identifier.py
PROJECTS/foundations/hash-identifier/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md
PROJECTS/foundations/password-manager/: .gitignore  README.md  install.sh  justfile  pyproject.toml
PROJECTS/foundations/password-manager/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md
PROJECTS/foundations/password-manager/src/password_manager/: __init__.py  __main__.py  constants.py  crypto.py  generator.py  main.py  vault.py
PROJECTS/foundations/password-manager/tests/: __init__.py  conftest.py  test_crypto.py  test_generator.py  test_vault.py
